# PhyRep

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  requirements.txt  start.sh  stop.sh
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py  schemas.py
backend/app/services/: __init__.py  latex_renderer.py  processing.py
backend/app/templates/: report_template.tex
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.js  App.tsx  main.js  main.tsx  styles.css
frontend/src/components/: BlockPalette.js  BlockPalette.tsx  Canvas.js  Canvas.tsx  ExportPanel.js  ExportPanel.tsx  MetadataPanel.js  MetadataPanel.tsx  UncertaintyCalculator.js  UncertaintyCalculator.tsx
frontend/src/components/blocks/: CalculationBlockEditor.js  CalculationBlockEditor.tsx  FormulaBlockEditor.js  FormulaBlockEditor.tsx  ImageBlockEditor.js  ImageBlockEditor.tsx  TableBlockEditor.js  TableBlockEditor.tsx  TextBlockEditor.js  TextBlockEditor.tsx
frontend/src/services/: api.js  api.ts
frontend/src/store/: useCanvasStore.js  useCanvasStore.ts
frontend/src/types/: blocks.ts
