[project]
name = "phyrep-backend"
version = "0.1.0"
description = "FastAPI backend for the Physics Report Generator"
authors = [{ name = "Lab Team" }]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "pydantic>=2.7.0,<3.0.0",
    "numpy>=1.26.0,<3.0.0",
    "pandas>=2.1.0,<3.0.0",
    "sympy>=1.12.0,<2.0.0",
    "jinja2>=3.1.0,<4.0.0",
    "python-multipart>=0.0.9,<1.0.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0,<9.0.0"]

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"
